# ai-job-search-assistant-api

./: .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  local.db  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_create_application_tailoring_runs.py  a7b8c9d0e1f2_add_agent_decision_metadata.py  b2c3d4e5f6a7_add_background_job_status.py  b8c9d0e1f2a3_add_agent_trace_cost_metadata.py  c3d4e5f6a7b8_add_workflow_metadata.py  c9d0e1f2a3b4_add_fallback_reason_to_runs.py  d4e5f6a7b8c9_add_job_descriptions.py  e5f6a7b8c9d0_add_agent_trace_steps.py  f6a7b8c9d0e1_add_artifact_embedding_to_runs.py
app/: main.py
app/core/: config.py
app/db/: base.py  session.py
app/llm/: base.py  cost_estimation.py  exceptions.py  factory.py  fallback_reason.py  gemini.py  mock.py  openai.py  parsing.py  token_estimation.py
app/models/: agent_trace.py  application.py  job_description.py  run_status.py
app/prompts/: agentic_tailoring.py  tailoring.py
demo/: job_ingest_request.json  tailor_request.json
evals/: README.md  __init__.py  run_eval.py  scoring.py
scripts/: demo_tailoring_run.py
tests/: conftest.py  test_agent_tools_review.py  test_agent_trace.py  test_agentic_workflow.py  test_application_tailoring.py  test_artifact_rag.py  test_background_jobs.py  test_demo_script.py  test_eval_runner.py  test_eval_scoring.py  test_health.py  test_llm_error_handling.py  test_llm_provider.py  test_persistence.py  test_rag.py  test_rag_error_handling.py  test_structured_output.py  test_workflow_metadata.py
(+22 files in other folders)
